--- a/committee.html
+++ b/committee.html
@@ -401,7 +401,7 @@
                                     <div class="row flex-parent">
                                         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6 flex-child">
                                             <img src="images/committee/Sasi-PM.jpg" alt="" class="organizer">
-                                            <p> Sasi P. M., <br><i>CDAC Trivandrum</i></p>
+                                            <p> Sasi P. M., <br><i>CEO,IT Parks, Kerala</i></p>
                                         </div>
                                         <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6 flex-child">
                                             <img src="images/committee/Mini-Ulanat.jpg" alt="" class="organizer">
@@ -486,7 +486,7 @@
 
                                         </div>
                                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
-                                            <img src="images/committee/avatar.png" alt="" class="organizer">
+                                            <img src="images/committee/Akila.jpg" alt="" class="organizer">
                                             <p>Akila Surendran,<br> NISH<br></p>
 
                                         </div>
