--- a/itrack.html
+++ b/itrack.html
@@ -254,15 +254,15 @@
                 <div class="row clearfix">
                   <div class="column col-lg-4 col-md-12 col-sm-4 col-xs-12">
                     <ul class="tab-buttons">
-                      <li data-tab="#tab-1" class="tab-btn">IEEE Region 10</li>
-                      <li data-tab="#tab-2" class="tab-btn active-btn">IEEE Kerala Section</li>
+                      <li data-tab="#tab-1" class="tab-btn active-btn">IEEE Region 10</li>
+                      <li data-tab="#tab-2" class="tab-btn">IEEE Kerala Section</li>
                       <li data-tab="#tab-3" class="tab-btn">Who should attend?</li>
                     </ul>
                   </div>
                   <div class="column col-lg-8 col-md-12 col-sm-8 col-xs-12">
                     <div class="tabs-content">
                       <!--Tab / Active Tab-->
-                      <div class="tab" id="tab-1" style="display: none;">
+                      <div class="tab" id="tab-1" style="display: block;">
                         <ul>
                           <li><b>Chris GwoGiun Lee</b>, <i>National Cheng Kung
                               University, Taiwan</i> <a class="url"
@@ -277,7 +277,7 @@
                       </div>
 
                       <!--Tab-->
-                      <div class="tab active-tab" id="tab-2" style="display: block;">
+                      <div class="tab active-tab" id="tab-2" style="display: none;">
                         <ul>
                           <li><b>Amarnath Raja</b>, <i>Past Chair, Kerala
                               Section,</i> <a class="url" href="mailto:a.raja@ieee.org">(a.raja@ieee.org)</a></li>
@@ -514,10 +514,7 @@
                 <td bgcolor="#ffaa5f"><b>Room</b></td>
                 <td bgcolor="#ffdf7a">TBA</td>
               </tr>
-              <tr>
-                <td bgcolor="#ffaa5f"><b>Chair</b></td>
-                <td bgcolor="#ffdf7a">TBA</td>
-              </tr>
+             
             </table>
 
             <table class="table" cellspacing="2" cellpadding="2" width="95%">
