--- a/jaswinder.html
+++ b/jaswinder.html
@@ -32,6 +32,30 @@
 
 </head>
 
+<style>
+    .speaker {
+       border: #822468 solid 2px;
+       box-shadow: #ffda15 3px 3px;
+       padding: 20px;
+   }
+   
+   .speaker-name {
+       font-size: 2em;
+       font-weight: 600;
+       color: #822468;
+   }
+   
+   .speaker-designation {
+       font-style: italic;
+       font-weight: 500;
+   }
+   
+   
+   </style>
+
+
+
+
 <body>
 <div class="page-wrapper">
 
@@ -205,9 +229,9 @@
             <div class="sec-title text-left">
 			                <h2>Keynote Speaker</h2><br>
 			<span class="left"><div style="float:left;">
-<img src="./images/jaswinder.png" alt="Jaswinder Ahuja" style="width:200px;margin-right:15px;"></div></span>
-<p><br><br><br>Jaswinder Ahuja<br>
-Cadence – India<br><br>
+<img class="speaker" src="./images/jaswinder.png" alt="Jaswinder Ahuja" style="width:200px;margin-right:15px;"></div></span>
+<p><br><br><br><span class="speaker-name">Jaswinder Ahuja</span><br>
+    <span class="speaker-designation">Cadence – India </span><br><br>
 
 <p align="justify">Jaswinder S. Ahuja is a Corporate Vice President and the Managing Director of Cadence Design Systems in India. He started his career with Cadence in 1988 as a software engineer and has led the India operations since 1996. Under his leadership Cadence’s India presence has grown from an R&D site of around 120 employees to Cadence’s largest international operation with over 2,200 employees across R&D, Corporate IT support, Global Customer Care and Field Operations.</p>
 
