--- a/jijo.html
+++ b/jijo.html
@@ -34,6 +34,26 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
  </head>
+<style>
+ .speaker {
+    border: #822468 solid 2px;
+    box-shadow: #ffda15 3px 3px;
+    padding: 20px;
+}
+
+.speaker-name {
+    font-size: 2em;
+    font-weight: 600;
+    color: #822468;
+}
+
+.speaker-designation {
+    font-style: italic;
+    font-weight: 500;
+}
+
+
+</style>
 
  <body>
      <div class="page-wrapper">
@@ -214,13 +234,13 @@
                      <h2>Speaker</h2><br>
                      <span class="left">
                          <div style="float:left;">
-                             <img src="./images/jijo.png" alt="Jijo G John" style="width:200px;margin-right:15px;">
+                             <img  class="speaker" src="./images/jijo.png" alt="Jijo G John" style="width:200px;margin-right:15px;">
                          </div>
                      </span>
-                     <p><br><br><br>Jijo G John<br>
-                         Phone: 8129-100-900
+                     <span class="speaker-name"> <p><br><br><br>Jijo G John<br></p></span>
+                     <span class="speaker-designation">  Phone: 8129-100-900</span>
                          <br>
-                         Designation: Owner/CEO, Calpine Group<br><br>
+                         <span class="speaker-designation">Owner/CEO, Calpine Group<br><br></span>
 
                          <p align="justify">Jijo is the CEO of Calpine Group consisting of companies UVJ Technologies,
                              Calpine Solutions and Realistic Solutions. Calpine is one of the first companies started
