--- a/mustafa.html
+++ b/mustafa.html
@@ -31,6 +31,20 @@
 
 </head>
 
+<style>
+.speaker-designation {
+    font-style: italic;
+    font-weight: 500;}
+
+.speaker-name {
+             font-size: 2em;
+             font-weight: 600;
+             color: #822468;
+         }
+
+</style>
+
+
 <body>
 <div class="page-wrapper">
 
@@ -205,8 +219,10 @@
 			                <h2>Keynote Speaker</h2><br>
 			<!-- <span class="left"><div style="float:left;">
 <img src="./images/jaswinder.jpg" alt="Tony Thomas" style="width:200px;margin-right:15px;"></div></span> -->
-<p>Mr. Mustafa Wajid<br>
-Meher Group<br><br>
+
+
+<span class="speaker-name"><p>Mr. Mustafa Wajid<br></p></span>
+<span class="speaker-designation">Meher Group<br><br></span>
 
 
 <p align="justify">Mustafa Wajid stumbled into an entrepreneurial career in 1977 at age 16 when he designed & manufactured his first power capacitor, in Bangalore, India. This was the business inception point for a small start-up company &#8220;MEHER Capacitors&#8221;. Prior to this he attended Bishop Cotton Boys&#39; School, followed by the then Christ College & graduated with Distinction as an Electrical Engineer in 1984, from UVCE while developing new capacitor technologies, products & contributing to growing the company. He thus went on to build and lead the team at MEHER, with active support & guidance from his family, enabling its Power Quality Components & Systems businesses to achieve technical recognition, customer appreciation across geographies and clear domain leadership status. In 2009-10, SCHNEIDER Electric, then a US$ 20 billion global MNC, acquired this business. (http://www.meher.com/images/press_release/Schneider_Press_Release.pdf) As Managing Director & CEO of the MEHER Group (www.meher.com) he now guides &#8220;Team MEHER&#8221; in its growth transformation via businesses across the power engineering, e-mobility & digital domains in addition to strengthening the MEHER Care Foundation. He actively supports & mentors a variety of start-ups that have a high transformation potential. He continues to be actively involved in key policy making initiatives, international professional societies, industry bodies & academia</p>
