--- a/speakers.html
+++ b/speakers.html
@@ -260,7 +260,7 @@
                      <p><br><br><br><span class="speaker-name"> Tony Thomas </span><br>
                          <span class="speaker-designation"> CVP & CIO Nissan Motor Corporation </span><br><br>
 
-                         <p align="justify">Tony Thomas serves as the Corporate Vice President and Chief Information
+                         <p align="">Tony Thomas serves as the Corporate Vice President and Chief Information
                              Officer (CIO) of Nissan Motor Company, based out of Yokohama, Japan. He was appointed to
                              that position in October of 2017. In this role, Tony is driving Information Technology,
                              Information Systems, Data Management and Information Security across all businesses and
