--- a/allabaksh.html
+++ b/allabaksh.html
@@ -31,6 +31,30 @@
 
 </head>
 
+
+<style>
+    .speaker {
+       border: #822468 solid 2px;
+       box-shadow: #ffda15 3px 3px;
+       padding: 20px;
+   }
+   
+   .speaker-name {
+       font-size: 2em;
+       font-weight: 600;
+       color: #822468;
+   }
+   
+   .speaker-designation {
+       font-style: italic;
+       font-weight: 500;
+   }
+   
+   
+   </style>
+
+
+
 <body>
 <div class="page-wrapper">
 
@@ -204,11 +228,10 @@
             <div class="sec-title text-left">
 			                <h2>Keynote Speaker</h2><br>
 			<span class="left"><div style="float:left;">
-<img src="./images/allabaksh.jpg" alt="Mr. Allabaksh Naikodi" style="width:200px;margin-right:15px;"></div></span>
-<p><br><br><br>Mr. Allabaksh Naikodi<br>
-Mahindra Electric<br><br>
-Head – Advance Technology, Mahindra Electric Mobility Limited<br>
-
+<img class="speaker" src="./images/allabaksh.jpg" alt="Mr. Allabaksh Naikodi" style="width:200px;margin-right:15px;"></div></span>
+<p><br><br><br><span class="speaker-name">Mr. Allabaksh Naikodi</span><br>
+    <span class="speaker-designation">Mahindra Electric<br>
+Head – Advance Technology, Mahindra Electric Mobility Limited<br></span><br>
 <p align="justify">Dr. Allabaksh Naikodi, with over 30 years of experience is presently heading the Technology and Product Engineering of Mahindra Electric - the Electric Vehicle Company of Mahindra. He obtained Ph. D degree in Electrical Engineering from Indian Institute of Technology, Madras (Chennai), India in 1995. Prior to joining Mahindra Electric he has worked for ABB, Honeywell, Schneider Electric and Tech Mahindra. He is member of many technical committees including the expert committee - government of India on EV sub-systems development and BIS ETD51 for charging systems. He has filed twelve patents in EV Technologies and his current research topics include:
 <ul><li>
 <li>• Battery and Battery Management Systems</li>
