--- a/amit.html
+++ b/amit.html
@@ -31,6 +31,28 @@
 
 </head>
 
+<style>
+    .speaker {
+       border: #822468 solid 2px;
+       box-shadow: #ffda15 3px 3px;
+       padding: 20px;
+   }
+   
+   .speaker-name {
+       font-size: 2em;
+       font-weight: 600;
+       color: #822468;
+   }
+   
+   .speaker-designation {
+       font-style: italic;
+       font-weight: 500;
+   }
+   
+   
+   </style>
+
+
 <body>
 <div class="page-wrapper">
 
@@ -204,8 +226,8 @@
             <div class="sec-title text-left">
 			                <h2>Keynote Speaker</h2><br>
 			<span class="left"><div style="float:left;">
-<img src="./images/amit.jpg" alt="Dr. Amit Kumar" style="width:200px;margin-right:15px;"></div></span>
-<p><br><br><br>Dr. Amit Kumar<br>
+<img class="speaker" src="./images/amit.jpg" alt="Dr. Amit Kumar" style="width:200px;margin-right:15px;"></div></span>
+<p><br><br><br><span class="speaker-name">Dr. Amit Kumar</span><br>
 <br>
 
 <p align="justify">A passionate DNA Forensics Professional, Entrepreneur, Engineer, Bioinformatician and an IEEE Volunteer. In 2005 he founded first Private DNA Testing Company Bio Axis DNA Research Centre (P) Ltd in Hyderabad, India with an US Collaborator. He has vast experience of training 1000+ Crime investigation officers and helped 750+ Criminal and non-criminal cases to reach justice by offering analytical services in his laboratory. His group also works extensively on Genetic Predisposition risk studies of cancers and has been helping many cancer patients from 2012 to fight and win the battle against cancer. Amit was member of IEEE Strategy Development and Environmental Assessment committee (SDEA) of IEEEMGA. He is senior member of IEEE and has been a very active IEEE Volunteer at Section, Council, Region, Technical Societies of Computational Intelligence and Engineering in Medicine and Biology and at IEEE MGA levels in several capacities. He has driven number of IEEE Conferences, Conference leadership programs, Entrepreneurship development workshops, Innovation and Internship related events. Currently He is also a visiting Professor at SJB Research Foundation and Vice Chairman of Conferences at IEEE India Council and Vice Chairman of IEEE Hyderabad Section. 
