--- a/chrislee.html
+++ b/chrislee.html
@@ -31,6 +31,13 @@
 
 </head>
 
+<style>
+.speaker-designation {
+    font-style: italic;
+    font-weight: 500;
+}
+</style>
+
 <body>
 <div class="page-wrapper">
 
@@ -205,7 +212,7 @@
 			                <h2>Keynote Speaker</h2><br>
 			<!-- <span class="left"><div style="float:left;">
 <img src="./images/chris.png" alt="Dr.Chris Lee" style="width:200px;margin-right:15px;"></div></span> -->
-<p>Dr.Chris Lee<br>
+<p class="speaker-designation" >Dr.Chris Lee<br>
 <br>
 
 <p align="justify">Chris Gwo Giun Lee is an investigator in the signal processing systems field including multimedia and bioinformatics. His system design work, based on analytics of algorithm concurrently with architecture, entitled Algorithm/Architecture Co-Design (AAC), has made computations on System-on-Chip, edge and cloud platforms possible in resolving complex problems accurately and efficiently.</p>
