--- a/harish.html
+++ b/harish.html
@@ -31,6 +31,29 @@
 
 </head>
 
+<style>
+    .speaker {
+       border: #822468 solid 2px;
+       box-shadow: #ffda15 3px 3px;
+       padding: 20px;
+   }
+   
+   .speaker-name {
+       font-size: 2em;
+       font-weight: 600;
+       color: #822468;
+   }
+   
+   .speaker-designation {
+       font-style: italic;
+       font-weight: 500;
+   }
+   
+   
+   </style>
+
+
+
 <body>
 <div class="page-wrapper">
 
@@ -203,7 +226,7 @@
             <div class="sec-title text-left">
 			                <h2>Keynote Speaker</h2><br>
 			<span class="left"><div style="float:left;">
-<img src="./images/harish.jpg" alt="Mr.Harish" style="width:200px;margin-right:15px;"></div></span>
+<img class="speaker" src="./images/harish.jpg" alt="Mr.Harish" style="width:200px;margin-right:15px;"></div></span>
 <p><br><br><br>Mr.Harish<br>
 Mysore, Director-IEEE India Operations<br><br>
 
