--- a/kush.html
+++ b/kush.html
@@ -31,6 +31,29 @@
 
 </head>
 
+
+<style>
+    .speaker {
+       border: #822468 solid 2px;
+       box-shadow: #ffda15 3px 3px;
+       padding: 20px;
+   }
+   
+   .speaker-name {
+       font-size: 2em;
+       font-weight: 600;
+       color: #822468;
+   }
+   
+   .speaker-designation {
+       font-style: italic;
+       font-weight: 500;
+   }
+   
+   
+   </style>
+
+
 <body>
 <div class="page-wrapper">
 
@@ -204,8 +227,8 @@
             <div class="sec-title text-left">
 			                <h2>Keynote Speaker</h2><br>
 			<span class="left"><div style="float:left;">
-<img src="./images/kush.png" alt="Dr.Kush Agarwal" style="width:200px;margin-right:15px;"></div></span>
-<p><br><br><br> Dr.Kush Agarwal<br>
+<img class="speaker" src="./images/kush.png" alt="Dr.Kush Agarwal" style="width:200px;margin-right:15px;"></div></span>
+<p><br><br><br><span class="speaker-name">Dr.Kush Agarwal</span> <br>
 <br><br>
 
 <p align="justify">Kush is an Indian-born Singaporean innovator, who is a technologist by training, a scientist by profession, and an entrepreneur by DNA, which stems from his early childhood involvement in the family pharmaceutical business. He has created technology business ventures from concept to launch and beyond within friends & family. To date, Kush has co-founded three Singapore based tech-startups through his inventions and is currently leading his A*STAR spin-off company - WaveScan Technologies in the role of CEO. WaveScan is a deep-tech company developing the next generation of AI-powered microwave & millimeter-wave contactless, see-through, radar technology. </p>
