--- a/nissan.html
+++ b/nissan.html
@@ -31,6 +31,28 @@
 
 </head>
 
+
+<style>
+    .speaker {
+       border: #822468 solid 2px;
+       box-shadow: #ffda15 3px 3px;
+       padding: 20px;
+   }
+   
+   .speaker-name {
+       font-size: 2em;
+       font-weight: 600;
+       color: #822468;
+   }
+   
+   .speaker-designation {
+       font-style: italic;
+       font-weight: 500;
+   }
+   
+   
+   </style>
+
 <body>
 <div class="page-wrapper">
 
@@ -204,9 +226,9 @@
             <div class="sec-title text-left">
 			                <h2>Cyber security -- panel discussion</h2><br>
 			<span class="left"><div style="float:left;">
-<img src="./images/tarun.png" alt="Tarun" style="width:200px;margin-right:15px;"></div></span>
-<p><br><br><br>New Age Cyber Attacks—Strategies to Mitigate them and Remediate<br>
-Mahindra Electric<br><br>
+<img class="speaker" src="./images/tarun.png" alt="Tarun" style="width:200px;margin-right:15px;"></div></span>
+<span class="speaker-designation"><p><br><br><br>New Age Cyber Attacks—Strategies to Mitigate them and Remediate<br>
+    Mahindra Electric<br><br></span>
 Head – Advance Technology, Mahindra Electric Mobility Limited<br>
 
 <p align="justify">The cyber threat landscape has grown by leaps and bounds in recent years. … So much, that even the World Economic Forum’s report of 2018 recognizes the breakdown of information infrastructure and networks due to large-scale cyber-attacks, as one of the top five global risks that impact people, in terms of their &#8220;likelihood.&#8221; <br>
@@ -223,28 +245,28 @@ Contact number: 9810307790<br>
 <p align="justify">Tarun brings two decades of experience in the areas of cyber security/information security/IT risk management. As the Chief Information Security Officer (CISO) for Nissan Digital Hub, he is responsible for overseeing the management of cyber security function at Nissan, besides providing leadership to the global teams and capability creation projects. </p><br><br>
 <h3>Panel members</h3>
 <span class="left"><div style="float:left;">
-<img src="./images/atul.png" alt="Atul Gupta" style="width:200px;margin-right:15px;"></div></span>
-Atul Gupta, <i>Leader – IT Advisory (Risk Consulting) and Cyber Security, KPMG (based in Delhi)</i>;<br> +91 9810081050; <a class="url" href="mailto:atulgupta@kpmg.com"> <br>atulgupta@kpmg.com</a><br>
+<img class="speaker" src="./images/atul.png" alt="Atul Gupta" style="width:200px;margin-right:15px;"></div></span>
+<span class="speaker-name">Atul Gupta</span> <br><span class="speaker-designation"><i>Leader – IT Advisory (Risk Consulting) and Cyber Security, KPMG (based in Delhi)</i></span><br> +91 9810081050; <a class="url" href="mailto:atulgupta@kpmg.com"> <br>atulgupta@kpmg.com</a><br>
 
 Atul, partner and IT Advisory head, is also the leader for cyber security services, KPMG in India. He has more than 21 years of experience in providing technology consulting services and has worked across regions, including US, Europe, Africa, and Asia Pacific. He has contributed significantly to wide range of industries, including Telecom, Financial Services, Technology, Manufacturing, Government and Energy, and Industrial Markets. 
 
 <br><br><br><br>
 <h3>Panelists:</h3><br>
 <span class="left"><div style="float:left;">
-<img src="./images/rohit.png" alt="Rohit Anand" style="width:200px;margin-right:15px;"></div></span>
-Rohit Anand, <i>Director & Partner, Tanisi IT Services P Ltd (based in New Delhi);</i>;<br> +91 7404130391; <a  class="url" href="mailto:rohit@tispl.net"> <br>rohit@tispl.net</a><br><br>
+<img class="speaker" src="./images/rohit.png" alt="Rohit Anand" style="width:200px;margin-right:15px;"></div></span>
+<span class="speaker-name">Rohit Anand</span> <br><span class="speaker-designation"><i>Director & Partner, Tanisi IT Services P Ltd (based in New Delhi);</i>;<br> +91 7404130391</span> <a  class="url" href="mailto:rohit@tispl.net"> <br>rohit@tispl.net</a><br><br>
 
 Rohit has 22 years of experience across industry verticals, such as IT, Airlines, Pharmaceuticals, and ITeS. Besides running a cyber security start-up in data classification in his previous assignment, he is currently engaged in his entrepreneurial venture, TISPL & DLP24X7, which is focused on data theft, brand protection, and related services for customers in India and abroad<br><br><br><br><br>
 <span class="left"><div style="float:left;">
-<img src="./images/vikas.png" alt="Vikas Kapoor" style="width:200px;margin-right:15px;"></div></span>
-Vikas Kapoor, <i>VP, Cyber Security, Vodafone Shared Services (based in Pune) </i>;<br> +919607953953; <a class="url" href="mailto:Vikas.Kapoor5@vodafone.com"> <br>Vikas.Kapoor5@vodafone.com</a><br><br>
+<img class="speaker" src="./images/vikas.png" alt="Vikas Kapoor" style="width:200px;margin-right:15px;"></div></span>
+<span class="speaker-name">Vikas Kapoor</span> <br><span class="speaker-designation"><i>VP, Cyber Security, Vodafone Shared Services (based in Pune) </i>;<br> +919607953953</span <a class="url" href="mailto:Vikas.Kapoor5@vodafone.com"> <br>Vikas.Kapoor5@vodafone.com</a><br><br>
 
 
 With a unique blend of experience ranging from deep hands-on operations to CXO-level global strategy formulation, Vikas has 20 years of experience in cyber security, Technology Risk and Compliance, IT Security Audits, Infrastructure Management, Offshore Development Center, and CIO’s Strategic Priorities Office. <br><br><br><br><br>
 <span class="left"><div style="float:left;">
-<img src="./images/lince.png" alt="Lince Lawrance" style="width:200px;margin-right:15px;"></div></span>
-Lince Lawrance, <i>Director, Cyber Security Advisory, Ernst & Young (EY) GDS (based in Trivandrum)
-</i>;<br> +91 9400449955; <a class="url" href="mailto:Lince.Lawrence@gds.ey.com"> <br>Lince.Lawrence@gds.ey.com</a><br>
+<img class="speaker" src="./images/lince.png" alt="Lince Lawrance" style="width:200px;margin-right:15px;"></div></span>
+<span class="speaker-name">Lince Lawrance</span><br> <span class="speaker-designation"><i>Director, Cyber Security Advisory, Ernst & Young (EY) GDS (based in Trivandrum)</span>
+</i>;<br><span class="speaker-designation">+91 9400449955;</span>  <a class="url" href="mailto:Lince.Lawrence@gds.ey.com"> <br>Lince.Lawrence@gds.ey.com</a><br>
 
 
 Lince, an ardent advocate (evangelist) of ERM and BCM practices, has over 19 years of experience in Enterprise Risk Management, Program Management, Operations, Information Security, Business Continuity, Audit Management, Fraud Control and Regulatory Compliance. 
