--- a/pingali.html
+++ b/pingali.html
@@ -33,6 +33,13 @@
 
 
 <style>
+
+
+.speaker {
+       border: #822468 solid 2px;
+       box-shadow: #ffda15 3px 3px;
+       padding: 20px;
+   }
     .speaker-designation {
         font-style: italic;
         font-weight: 500;}
@@ -221,7 +228,7 @@
             <div class="sec-title text-left">
 			                <h2>Keynote Speaker</h2><br>
 			<span class="left"><div style="float:left;">
-<!--<img src="./images/pingali.png" alt="Gopal Pingali" style="width:200px;margin-right:15px;"></div></span> !-->
+<img class="speaker" src="./images/pingali.jpg" alt="Gopal Pingali" style="width:200px;margin-right:15px;"></div></span>
 <p><br><span class="speaker-name"> Dr.Pingali</span><br>
     <span class="speaker-designation">IBM Distinguished Engineer and Vice President of the Global Technology Services Labs (GTS Labs) at IBM<br><br></span>
 
