--- a/htrack.html
+++ b/htrack.html
@@ -277,11 +277,11 @@
                </tr>
                <tr>
                  <td bgcolor="#ffaa5f"><b>Room</b></td>
-                 <td bgcolor="#ffdf7a">Grand Ballroom 1, Grand Hyatt</td>
+                 <td bgcolor="#ffdf7a">Grand Ballroom 2, Grand Hyatt</td>
                </tr>
                <tr>
                  <td bgcolor="#ffaa5f"><b>Chair</b></td>
-                 <td bgcolor="#ffdf7a">TBA</td>
+                 <td bgcolor="#ffdf7a">Akila Surendran</td>
                </tr>
              </table>
 
@@ -336,11 +336,7 @@
                  </tr>
                  <tr>
                    <td bgcolor="#ffaa5f"><b>Room</b></td>
-                   <td bgcolor="#ffdf7a">Grand Ballroom 1, Grand Hyatt</td>
-                 </tr>
-                 <tr>
-                   <td bgcolor="#ffaa5f"><b>Chair</b></td>
-                   <td bgcolor="#ffdf7a">TBA</td>
+                   <td bgcolor="#ffdf7a">Grand Ballroom 2, Grand Hyatt</td>
                  </tr>
                </table>
                <table class="table" cellspacing="2" cellpadding="2" width="95%">
@@ -402,12 +398,9 @@
                    </tr>
                    <tr>
                      <td bgcolor="#ffaa5f"><b>Room</b></td>
-                     <td bgcolor="#ffdf7a">Grand Ballroom 1, Grand Hyatt</td>
+                     <td bgcolor="#ffdf7a">Grand Ballroom 2, Grand Hyatt</td>
                    </tr>
-                   <tr>
-                     <td bgcolor="#ffaa5f"><b>Chair</b></td>
-                     <td bgcolor="#ffdf7a">TBA</td>
-                   </tr>
+                  
                  </table>
                  <table class="table" cellspacing="2" cellpadding="2" width="95%">
                    <tr>
@@ -474,7 +467,7 @@
                    </tr>
                    <tr>
                      <td bgcolor="#ffaa5f"><b>Room</b></td>
-                     <td bgcolor="#ffdf7a">Grand Ballroom 1, Grand Hyatt</td>
+                     <td bgcolor="#ffdf7a">Grand Ballroom 2, Grand Hyatt</td>
                    </tr>
                    <tr>
                      <td bgcolor="#ffaa5f"><b>Chair</b></td>
@@ -522,11 +515,11 @@
                    </tr>
                    <tr>
                      <td bgcolor="#ffaa5f"><b>Room</b></td>
-                     <td bgcolor="#ffdf7a">Grand Ballroom 1, Grand Hyatt</td>
+                     <td bgcolor="#ffdf7a">Grand Ballroom 2, Grand Hyatt</td>
                    </tr>
                    <tr>
                      <td bgcolor="#ffaa5f"><b>Chair</b></td>
-                     <td bgcolor="#ffdf7a">TBA</td>
+                     <td bgcolor="#ffdf7a">K G Satheesh Kumar</td>
                    </tr>
                  </table>
 
