--- a/index.html
+++ b/index.html
@@ -302,6 +302,21 @@
                         </div>
                     </div>
                 </div>
+                <!-- <div class="item slide-3"
+                style="background-image:url(images/slider/governor.jpg);background-position: center center;">
+
+                <div class="carousel-caption">
+                    <div class="container">
+                        <div class="box valign-middle">
+                            <div class="content text-center">
+                                <div class="main-banner-content-two">
+                                  
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
             </div>
             <!-- Controls -->
             <a class="left carousel-control" href="#minimal-bootstrap-carousel" role="button" data-slide="prev">
@@ -318,6 +333,7 @@
                 <!--
             -->
                 <li data-target="#minimal-bootstrap-carousel" data-slide-to="1"></li>
+                <li data-target="#minimal-bootstrap-carousel" data-slide-to="2"></li>
                 <!--
             -->
             </ul>
@@ -416,7 +432,7 @@
                                 <img class="sponser-logo" src="images/logo-2.jpg" alt="Mathworks" style="height: 65px;">
                             </div>
                             <div class="col-md-4" style="padding-top:32px;">
-                                <img class="sponser-logo" src="images/logo-3.png" alt="IEEE SA" style="height: 75px;">
+                                <img class="sponser-logo" src="images/logo-3.png" alt="IEEE SA" style="max-width: 250px;">
                             </div>
                             <div class="col-md-4" style="padding-top:32px;">
                                 <img class="sponser-logo" src="images/logo-ieee.jpeg" alt="CDT" style="height: 80px;">
