--- a/index.html
+++ b/index.html
@@ -302,21 +302,22 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="item slide-3"
-                style="background-image:url(images/slider/governor.jpg);background-position: center center;">
-
-                <div class="carousel-caption">
-                    <div class="container">
-                        <div class="box valign-middle">
-                            <div class="content text-center">
-                                <div class="main-banner-content-two">
-                                  
+                <div class="item slide-3" style="height: 700px;">
+                    <img src="images/slider/governor.jpg" class="normal"
+                        alt="Hounarable governor of kerala will be Inaugurating TENCON 2019" style="display: none;">
+                    <img src="images/slider/governor-mob.jpg" class="mobile" alt="" style="display: none;">
+                   <br> <div class="carousel-caption">
+                        <div class="container">
+                            <div class="box valign-middle">
+                                <div class="content text-center">
+                                    <div class="main-banner-content-two">
+                                            <!-- <a class="theme-btn btn-style-one" href="inaugural-program.html">View Inaugural Program Schedule</a> -->
+                                        </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div> -->
             </div>
             <!-- Controls -->
             <a class="left carousel-control" href="#minimal-bootstrap-carousel" role="button" data-slide="prev">
