updated table row color

--- a/inaugural-program.html
+++ b/inaugural-program.html
@@ -53,7 +53,7 @@
          }
 
          table tr:nth-child(even) td {
-             background: #ececec;
+             background: #eee;
          }
 
      </style>
