--- a/tencon.html
+++ b/tencon.html
@@ -49,7 +49,7 @@
                 }
        
                 table tr:nth-child(even) td {
-                    background: #cccccc;
+                    background: #eee;
                 }
             </style>
      <div class="page-wrapper">
@@ -213,7 +213,7 @@
                                             <li><a href="htrack.html">Humanitarian Activities Track</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="about.html">Registration</a></li>
+                                    <li><a href="reg.html">Registration</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
                             </div>
