added committee member

--- a/itrack.html
+++ b/itrack.html
@@ -400,7 +400,7 @@
                 <td>
                   <p class="time">09:00 - 09:30</p>
                 </td>
-                <td><a class="url" href="pingali.html" target="_blank">Mr. Gopal Pingali,
+                <td><a class="url" href="pingali.html" target="_blank">Dr. Gopal Pingali,
                     <i>VP IBM India</i></a></td>
               </tr>
               <!--Empty row START-->
