--- a/committee.html
+++ b/committee.html
@@ -441,6 +441,12 @@
                                             <p>Jyothi Ramaswamy, <br><i>TCS, Trivandrum</i><br></p>
                                         </li>
                                     </div>
+                                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6 flex-child">
+                                        <li><b>Finance Co-Chair</b><br><br>
+                                            <img src="images/committee/sunitha-haris.jpg" alt="" class="organizer">
+                                            <p>Sunitha Beevi K<br><i>TKMCE, Kollam</i><br></p>
+                                        </li>
+                                    </div>
 
                                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6 flex-child">
                                         <li><b>Publication Chair</b><br><br>
