--- a/committee.html
+++ b/committee.html
@@ -574,7 +574,7 @@
                                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 
                                             <img src="images/committee/Shankar-J.jpg" alt="" class="organizer">
-                                            <p>Shankar J, UKFCE, Trivandrum<br></p>
+                                            <p>Shankar J, UKFCET, Parippally, Kollam<br></p>
 
                                         </div>
                                     </div>
