--- a/mustafa.html
+++ b/mustafa.html
@@ -32,6 +32,12 @@
 </head>
 
 <style>
+.speaker {
+       border: #822468 solid 2px;
+       box-shadow: #ffda15 3px 3px;
+       padding: 20px;
+   }
+
 .speaker-designation {
     font-style: italic;
     font-weight: 500;}
@@ -217,8 +223,8 @@
         <div class="container">
             <div class="sec-title text-left">
 			                <h2>Keynote Speaker</h2><br>
-			<!-- <span class="left"><div style="float:left;">
-<img src="./images/jaswinder.jpg" alt="Tony Thomas" style="width:200px;margin-right:15px;"></div></span> -->
+			<span class="left"><div style="float:left;">
+<img class="speaker" src="./images/mustafa.jpg" alt="Tony Thomas" style="width:200px;margin-right:15px;"></div></span> 
 
 
 <span class="speaker-name"><p>Mr. Mustafa Wajid<br></p></span>
